tests/ui/rfc-2008-non-exhaustive/uninhabited/patterns_same_crate.stderr
error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:52:9
   |
LL |         Some(_x) => (),
   |         ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/patterns_same_crate.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:57:9
   |
LL |         Some(_x) => (),
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:61:15
   |
LL |     while let PartiallyInhabitedVariants::Struct { x } = partially_inhabited_variant() {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:65:15
   |
LL |     while let Some(_x) = uninhabited_struct() {
   |               ^^^^^^^^

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:68:15
   |
LL |     while let Some(_x) = uninhabited_tuple_struct() {
   |               ^^^^^^^^

error: aborting due to 5 previous errors

